--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <html>
 <head>
-    <title>Minu Veebileht9</title>
+    <title>Martial Arts School</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        header {
+            background-color: black;
+            color: white;
+        }
+        header a {
+            color: white;
+            text-decoration: none;
+        }
+        main {
+            background-color: lightgray;
+        }
+        h1 img {
+            display: block;
+            margin-top: 10px;
+        }
+        .bold-italic {
+            font-weight: bold;
+            font-style: italic;
+        }
+    </style>
 </head>
 <body>
-    <h1>Minu Veebileht9</h1>
+    <header>
+        <img src="/uploads/2020/10/boxing-1293088_640_0_1602494675.png" height="50px"/>
+        <a href="https://en.wikipedia.org/wiki/Martial_arts" style="color:white">History</a>
+    </header>
+    <main>
+        <h1 style="font-size:50px;text-align:center;">Martial arts school<br/>
+            <img src="/uploads/2020/10/thai-boxing-297023_1280_0_1602496230.png" height="150"/>
+        </h1>
+        <p style="font-size:20px;">We invite you to study any type of hand-to-hand combat you like. <br/>We offer: <b><i>traditional hand-to-hand fighting, Thai boxing, Jiu-Jitsu, karate, and much more</i></b>. Our classes are taught by professional trainers in groups of different levels.</p>
+        <img src="/uploads/2020/10/karate-4575114_640_0_1602523338.png" height="230px"/><img src="/uploads/2020/10/punching-bag_0_1602525500.png" height="230px"/><img src="/uploads/2020/10/boxing-ring_0_1602525156.png" height="230px"/>
+    </main>
+    <footer style="background-color:black;color:white;">
+        <p style="font-size:15px;"> Address: 15 Healthy St., Sport City.</p>
+        <p>Tel.: 596-457</p>
+    </footer>
 </body>
 </html>
+
 
 
 
