--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <header>
-        <img src="cada.PNG" height="50px" alt="Logo"/>
+        <img src="ceyda.png" height="20px" alt="Logo"/>
         <nav>
             <a href="#fact1">Fact 1</a>
             <a href="#fact2">Fact 2</a>
